--- a/src/br/ufrpe/zoologico/gui/grafica/FXML/CadastroReserva.fxml
+++ b/src/br/ufrpe/zoologico/gui/grafica/FXML/CadastroReserva.fxml
@@ -22,6 +22,16 @@
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="720.0" prefWidth="1280.0">
                      <children>
+                        <MenuButton fx:id="idEspacoMnuItm" layoutX="395.0" layoutY="251.0" mnemonicParsing="false" prefWidth="200.0" text="ID do espaço reservável" />
+                        <MenuButton fx:id="cnpjMnuItm" layoutX="395.0" layoutY="294.0" mnemonicParsing="false" prefWidth="200.0" text="CNPJ da Instituição" />
+                        <Slider fx:id="hrInicioSld" blockIncrement="1.0" layoutX="395.0" layoutY="339.0" majorTickUnit="12.0" max="24.0" minorTickCount="11" prefWidth="200.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="12.0" />
+                        <Slider fx:id="hrFimSld" blockIncrement="1.0" layoutX="395.0" layoutY="386.0" majorTickUnit="12.0" max="24.0" minorTickCount="11" prefWidth="200.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="12.0" />
+                        <TextField fx:id="valorTextField" layoutX="395.0" layoutY="430.0" prefWidth="200.0" promptText="Ex.: 500,00" />
+                        <DatePicker fx:id="dtReservaDtPck" layoutX="395.0" layoutY="477.0" prefWidth="200.0" promptText="Data início" />
+                        <DatePicker fx:id="dtValidadeDtPck" layoutX="395.0" layoutY="523.0" prefWidth="200.0" promptText="Data fim" />
+                        <TextField fx:id="tpEventoTextField" layoutX="395.0" layoutY="571.0" prefWidth="200.0" promptText="Característica do evento" />
+                        <TextField fx:id="qtdPessoasTextField" layoutX="395.0" layoutY="617.0" prefWidth="200.0" promptText="Números apenas" />
+                        <TextArea fx:id="observacoesTextField" layoutX="799.0" layoutY="399.0" prefHeight="109.0" prefWidth="354.0" wrapText="true" />
                         <Button layoutX="808.0" layoutY="541.0" mnemonicParsing="false" onAction="#cadastrarReserva" text="Cadastrar Reserva">
                            <font>
                               <Font size="36.0" />
@@ -87,16 +97,6 @@
                               <Font size="30.0" />
                            </font>
                         </Label>
-                        <TextArea fx:id="observacoesTextField" layoutX="799.0" layoutY="399.0" prefHeight="109.0" prefWidth="354.0" wrapText="true" />
-                        <MenuButton layoutX="395.0" layoutY="251.0" mnemonicParsing="false" prefWidth="200.0" text="ID do espaço reservável" />
-                        <MenuButton layoutX="395.0" layoutY="294.0" mnemonicParsing="false" prefWidth="200.0" text="CNPJ da Instituição" />
-                        <Slider blockIncrement="1.0" layoutX="395.0" layoutY="339.0" majorTickUnit="12.0" max="24.0" minorTickCount="11" prefWidth="200.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="12.0" />
-                        <Slider blockIncrement="1.0" layoutX="395.0" layoutY="386.0" majorTickUnit="12.0" max="24.0" minorTickCount="11" prefWidth="200.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="12.0" />
-                        <TextField layoutX="395.0" layoutY="430.0" prefWidth="200.0" promptText="Ex.: 500,00" />
-                        <DatePicker layoutX="395.0" layoutY="477.0" prefWidth="200.0" promptText="Data início" />
-                        <DatePicker layoutX="395.0" layoutY="523.0" prefWidth="200.0" promptText="Data fim" />
-                        <TextField layoutX="395.0" layoutY="571.0" prefWidth="200.0" promptText="Característica do evento" />
-                        <TextField layoutX="395.0" layoutY="617.0" prefWidth="200.0" promptText="Números apenas" />
                      </children>
                   </AnchorPane>
                </content>
