--- a/src/br/ufrpe/zoologico/gui/grafica/FXML/Admin.fxml
+++ b/src/br/ufrpe/zoologico/gui/grafica/FXML/Admin.fxml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.effect.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.effect.Blend?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<VBox prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.zoologico.gui.grafica.controller.AdminController">
+<VBox prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.zoologico.gui.grafica.controller.AdminController">
   <children>
       <AnchorPane style="-fx-background-color: #590;">
          <children>
@@ -59,7 +64,7 @@
             <VBox blendMode="MULTIPLY" layoutX="999.0" layoutY="83.0" prefHeight="530.0" prefWidth="100.0">
                <children>
                   <Separator prefHeight="160.0" prefWidth="200.0" />
-                  <Button fx:id="btnCadastrar" disable="true" mnemonicParsing="false" onAction="#cadastrar" prefHeight="25.0" prefWidth="100.0" text="Cadastrar" />
+                  <Button fx:id="btnCadastrar" mnemonicParsing="false" onAction="#cadastrar" prefHeight="25.0" prefWidth="100.0" text="Cadastrar" />
                   <Separator blendMode="MULTIPLY" prefHeight="20.0" prefWidth="100.0" />
                   <Button fx:id="btnEditar" disable="true" mnemonicParsing="false" onAction="#editar" prefHeight="25.0" prefWidth="100.0" text="Editar" />
                   <Separator blendMode="MULTIPLY" prefHeight="20.0" prefWidth="100.0" />
