--- a/src/br/ufrpe/zoologico/gui/grafica/FXML/CadastrarConsultas.fxml
+++ b/src/br/ufrpe/zoologico/gui/grafica/FXML/CadastrarConsultas.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -123,6 +124,21 @@
                               <Font size="24.0" />
                            </font>
                         </Button>
+                        <TextField fx:id="horaTextField1" layoutX="984.0" layoutY="220.0" prefHeight="39.0" prefWidth="66.0" promptText="Hora">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </TextField>
+                        <TextField fx:id="minutoTextField1" layoutX="1092.0" layoutY="221.0" prefHeight="39.0" prefWidth="80.0" promptText="Minuto">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </TextField>
+                        <Label layoutX="1070.0" layoutY="211.0" text=":">
+                           <font>
+                              <Font size="36.0" />
+                           </font>
+                        </Label>
                      </children>
                   </AnchorPane>
               </content>
@@ -143,17 +159,17 @@
                               <TableColumn fx:id="colunaIdAnimal" prefWidth="144.51031494140625" text="ID" />
                            </columns>
                         </TableView>
-                        <Label layoutX="156.0" layoutY="141.0" text="Veterinários">
+                        <Label layoutX="503.0" layoutY="140.0" text="Veterinários">
                            <font>
                               <Font size="36.0" />
                            </font>
                         </Label>
-                        <Label layoutX="532.0" layoutY="140.0" text="Animais">
+                        <Label layoutX="199.0" layoutY="143.0" text="Animais">
                            <font>
                               <Font size="36.0" />
                            </font>
                         </Label>
-                        <DatePicker fx:id="dataDaConsultaDatePicker" layoutX="893.0" layoutY="285.0" prefHeight="41.0" prefWidth="219.0" />
+                        <DatePicker fx:id="dataDaConsultaDatePicker" layoutX="790.0" layoutY="281.0" prefHeight="41.0" prefWidth="219.0" />
                         <Label layoutX="859.0" layoutY="214.0" text="Data da Consulta">
                            <font>
                               <Font size="36.0" />
@@ -178,6 +194,21 @@
                         <Label layoutX="395.0" layoutY="52.0" text="Cadastro de Consulta">
                            <font>
                               <Font size="48.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="horaTextField" layoutX="1046.0" layoutY="280.0" prefHeight="39.0" prefWidth="66.0" promptText="Hora">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </TextField>
+                        <TextField fx:id="minutoTextField" layoutX="1154.0" layoutY="281.0" prefHeight="39.0" prefWidth="80.0" promptText="Minuto">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </TextField>
+                        <Label layoutX="1132.0" layoutY="271.0" text=":">
+                           <font>
+                              <Font size="36.0" />
                            </font>
                         </Label>
                      </children>
