--- a/src/br/ufrpe/zoologico/gui/grafica/FXML/CadastroJaula.fxml
+++ b/src/br/ufrpe/zoologico/gui/grafica/FXML/CadastroJaula.fxml
@@ -147,5 +147,10 @@
             <Font size="36.0" />
          </font>
       </Button>
+      <Button fx:id="cadas" disable="true" layoutX="1036.0" layoutY="318.0" mnemonicParsing="false" onAction="#cadastrar" text="Cadastrar" visible="false">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
