--- a/src/br/ufrpe/zoologico/gui/grafica/FXML/CadastrarConsultas.fxml
+++ b/src/br/ufrpe/zoologico/gui/grafica/FXML/CadastrarConsultas.fxml
@@ -25,17 +25,17 @@
                               <Font size="24.0" />
                            </font>
                         </Label>
-                        <Label layoutX="154.0" layoutY="271.0" text="Animal:">
+                        <Label layoutX="154.0" layoutY="301.0" text="Animal:">
                            <font>
                               <Font size="24.0" />
                            </font>
                         </Label>
-                        <Label layoutX="152.0" layoutY="321.0" text="Horário:">
+                        <Label layoutX="152.0" layoutY="351.0" text="Horário:">
                            <font>
                               <Font size="24.0" />
                            </font>
                         </Label>
-                        <Label layoutX="163.0" layoutY="379.0" text="Obs:">
+                        <Label layoutX="163.0" layoutY="409.0" text="Obs:">
                            <font>
                               <Font size="24.0" />
                            </font>
@@ -50,22 +50,22 @@
                               <Font size="24.0" />
                            </font>
                         </Label>
-                        <Label fx:id="nomeMedicoLabel" layoutX="260.0" layoutY="220.0" text="-">
+                        <Label fx:id="nomeMedicoLabel" alignment="TOP_LEFT" layoutX="252.0" layoutY="220.0" prefHeight="75.0" prefWidth="230.0" text="-" wrapText="true">
                            <font>
                               <Font size="24.0" />
                            </font>
                         </Label>
-                        <Label fx:id="nomeAnimalLabel" layoutX="254.0" layoutY="269.0" text="-">
+                        <Label fx:id="nomeAnimalLabel" layoutX="253.0" layoutY="302.0" text="-">
                            <font>
                               <Font size="24.0" />
                            </font>
                         </Label>
-                        <Label fx:id="horarioLabel" layoutX="258.0" layoutY="319.0" text="-">
+                        <Label fx:id="horarioLabel" layoutX="258.0" layoutY="349.0" text="-">
                            <font>
                               <Font size="24.0" />
                            </font>
                         </Label>
-                        <Label fx:id="obsLabel" alignment="TOP_LEFT" contentDisplay="TOP" layoutX="234.0" layoutY="379.0" prefHeight="157.0" prefWidth="216.0" text="-" wrapText="true">
+                        <Label fx:id="obsLabel" alignment="TOP_LEFT" contentDisplay="TOP" layoutX="234.0" layoutY="409.0" prefHeight="157.0" prefWidth="216.0" text="-" wrapText="true">
                            <font>
                               <Font size="18.0" />
                            </font>
