--- a/src/br/ufrpe/zoologico/gui/grafica/FXML/Admin.fxml
+++ b/src/br/ufrpe/zoologico/gui/grafica/FXML/Admin.fxml
@@ -14,9 +14,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.zoologico.gui.grafica.controller.AdminController">
+<VBox prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.zoologico.gui.grafica.controller.AdminController">
   <children>
-      <AnchorPane style="-fx-background-color: #590;">
+      <AnchorPane>
          <children>
           <MenuBar prefHeight="25.0" prefWidth="135.0" VBox.vgrow="NEVER">
                <menus>
@@ -44,9 +44,9 @@
             </Label>
          </children>
       </AnchorPane>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" style="-fx-background-color: #597;" VBox.vgrow="ALWAYS">
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
          <children>
-            <HBox blendMode="MULTIPLY" layoutX="525.0" layoutY="14.0" prefHeight="25.0" prefWidth="252.0">
+            <HBox layoutX="525.0" layoutY="14.0" prefHeight="25.0" prefWidth="252.0">
                <children>
                   <Button fx:id="btnVeterinario" mnemonicParsing="false" onAction="#populaTabelaVeterinario" prefWidth="80.0" text="Veterinário" textAlignment="CENTER" />
                   <Separator orientation="VERTICAL" prefHeight="200.0" />
@@ -55,13 +55,13 @@
                   <Button fx:id="btnFuncionario" mnemonicParsing="false" onAction="#populaTabelaFuncionario" prefHeight="25.0" prefWidth="80.0" text="Funcionário" textAlignment="CENTER" />
                </children>
             </HBox>
-            <TableView fx:id="tbvPrincipal" blendMode="MULTIPLY" layoutX="14.0" layoutY="83.0" prefHeight="600.0" prefWidth="700.0" style="-fx-background-color: #380;">
+            <TableView fx:id="tbvPrincipal" layoutX="14.0" layoutY="83.0" prefHeight="600.0" prefWidth="700.0">
               <columns>
                 <TableColumn fx:id="clmPrincipal" prefWidth="75.0" text="C1" />
                 <TableColumn fx:id="clmSecundaria" prefWidth="75.0" text="C2" />
               </columns>
             </TableView>
-            <VBox blendMode="MULTIPLY" layoutX="999.0" layoutY="83.0" prefHeight="530.0" prefWidth="100.0">
+            <VBox layoutX="999.0" layoutY="83.0" prefHeight="530.0" prefWidth="100.0">
                <children>
                   <Separator prefHeight="160.0" prefWidth="200.0" />
                   <Button fx:id="btnCadastrar" mnemonicParsing="false" onAction="#cadastrar" prefHeight="25.0" prefWidth="100.0" text="Cadastrar" />
