--- a/src/br/ufrpe/zoologico/gui/grafica/FXML/GerenciarServicos.fxml
+++ b/src/br/ufrpe/zoologico/gui/grafica/FXML/GerenciarServicos.fxml
@@ -11,17 +11,17 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.zoologico.gui.grafica.controller.GerenciarServicosController">
   <tabs>
-    <Tab text="Untitled Tab 1">
+    <Tab text="Ver Faturas do Serviço">
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <TableView layoutX="62.0" layoutY="81.0" prefHeight="472.0" prefWidth="326.0">
+                  <TableView fx:id="tabelaServicos" layoutX="62.0" layoutY="81.0" onMouseClicked="#selecionarServico" prefHeight="472.0" prefWidth="326.0">
                     <columns>
-                      <TableColumn prefWidth="75.0" text="ID Serviço" />
-                      <TableColumn prefWidth="183.0" text="Descrição" />
-                        <TableColumn prefWidth="67.0" text="Valor" />
+                      <TableColumn fx:id="colunaIdServico" prefWidth="75.0" text="ID Serviço" />
+                      <TableColumn fx:id="colunaDescricao" prefWidth="183.0" text="Descrição" />
+                        <TableColumn fx:id="colunaValorServico" prefWidth="67.0" text="Valor" />
                     </columns>
                   </TableView>
                   <Label layoutX="182.0" layoutY="46.0" text="Serviços">
@@ -29,40 +29,40 @@
                         <Font size="24.0" />
                      </font>
                   </Label>
-                  <Label layoutX="590.0" layoutY="46.0" text="Faturas do Serviço selecionado">
+                  <Label layoutX="662.0" layoutY="45.0" text="Faturas do Serviço selecionado">
                      <font>
                         <Font size="24.0" />
                      </font>
                   </Label>
-                  <TableView editable="true" layoutX="540.0" layoutY="93.0" prefHeight="154.0" prefWidth="558.0">
+                  <TableView fx:id="tabelaFatura" editable="true" layoutX="540.0" layoutY="93.0" onMouseClicked="#selecionarFatura" prefHeight="154.0" prefWidth="558.0">
                     <columns>
-                      <TableColumn prefWidth="59.0" text="ID Fatura" />
-                      <TableColumn prefWidth="56.0" text="Valor" />
-                        <TableColumn prefWidth="68.0" text="Data" />
-                        <TableColumn prefWidth="68.0" text="DT_Paga" />
-                        <TableColumn prefWidth="76.0" text="Vl_Multa" />
-                        <TableColumn prefWidth="134.0" text="Stats" />
-                        <TableColumn prefWidth="96.0" text="Tipo fatura" />
+                      <TableColumn fx:id="colunaIdFatura" prefWidth="59.0" text="ID Fatura" />
+                      <TableColumn fx:id="colunaValorFatura" prefWidth="56.0" text="Valor" />
+                        <TableColumn fx:id="colunaDataFatura" prefWidth="68.0" text="Data" />
+                        <TableColumn fx:id="colunaDataPaga" prefWidth="68.0" text="DT_Paga" />
+                        <TableColumn fx:id="colunaValorMulta" prefWidth="76.0" text="Vl_Multa" />
+                        <TableColumn fx:id="colunaStatus" prefWidth="134.0" text="Stats" />
+                        <TableColumn fx:id="colunaTipoFiatura" prefWidth="96.0" text="Tipo fatura" />
                     </columns>
                   </TableView>
-                  <TextField alignment="CENTER" layoutX="518.0" layoutY="334.0" promptText="Valor da Fatura">
+                  <TextField fx:id="valorDaFaturaTextField" alignment="CENTER" layoutX="518.0" layoutY="334.0" promptText="Valor da Fatura">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </TextField>
-                  <TextField alignment="CENTER" layoutX="518.0" layoutY="391.0" promptText="Valor da Multa">
+                  <TextField fx:id="valorDaMultaTextField" alignment="CENTER" layoutX="520.0" layoutY="392.0" promptText="Valor da Multa">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </TextField>
-                  <DatePicker layoutX="518.0" layoutY="448.0" prefHeight="38.0" prefWidth="224.0" />
-                  <DatePicker layoutX="1006.0" layoutY="333.0" prefHeight="38.0" prefWidth="224.0" />
-                  <TextField alignment="CENTER" layoutX="1006.0" layoutY="391.0" promptText="Status">
+                  <DatePicker fx:id="dataDaFaturaDatePicker" layoutX="518.0" layoutY="448.0" prefHeight="38.0" prefWidth="224.0" />
+                  <DatePicker fx:id="dstaDePagamentoDatePicker" layoutX="1006.0" layoutY="333.0" prefHeight="38.0" prefWidth="224.0" />
+                  <TextField fx:id="statusTextField" alignment="CENTER" layoutX="1006.0" layoutY="391.0" promptText="Status">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </TextField>
-                  <TextField alignment="CENTER" layoutX="1006.0" layoutY="446.0" promptText="Tipo de Fatura">
+                  <TextField fx:id="tipoDeFaturaTextField" alignment="CENTER" layoutX="1006.0" layoutY="446.0" promptText="Tipo de Fatura">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -97,22 +97,22 @@
                         <Font size="24.0" />
                      </font>
                   </Label>
-                  <Button layoutX="763.0" layoutY="272.0" mnemonicParsing="false" text="Editar Fatura">
+                  <Button layoutX="763.0" layoutY="272.0" mnemonicParsing="false" onAction="#editarFatura" text="Editar Fatura">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Button>
-                  <Button layoutX="739.0" layoutY="533.0" mnemonicParsing="false" text="Salvar Alterações">
+                  <Button layoutX="739.0" layoutY="533.0" mnemonicParsing="false" onAction="#salvarAlteracoes" text="Salvar Alterações">
                      <font>
                         <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="1126.0" layoutY="21.0" mnemonicParsing="false" onAction="#voltar" text="Voltar">
+                     <font>
+                        <Font size="24.0" />
                      </font>
                   </Button>
                </children></AnchorPane>
-      </content>
-    </Tab>
-    <Tab text="Untitled Tab 2">
-      <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
       </content>
     </Tab>
   </tabs>
