--- a/src/br/ufrpe/zoologico/gui/grafica/FXML/GerenciamentoAnimal.fxml
+++ b/src/br/ufrpe/zoologico/gui/grafica/FXML/GerenciamentoAnimal.fxml
@@ -10,31 +10,30 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.zoologico.gui.grafica.controller.GerenciarAnimalController">
    <children>
-      <TableView layoutX="72.0" layoutY="110.0" prefHeight="200.0" prefWidth="260.0">
+      <TableView fx:id="tbEspecie" layoutX="72.0" layoutY="110.0" prefHeight="200.0" prefWidth="260.0">
         <columns>
-          <TableColumn prefWidth="40.0" text="ID" />
-          <TableColumn prefWidth="219.0" text="Especie" />
+          <TableColumn fx:id="tcIdEspecie" prefWidth="40.0" text="ID" />
+          <TableColumn fx:id="tcEspecie" prefWidth="219.0" text="Especie" />
         </columns>
       </TableView>
-      <TableView layoutX="72.0" layoutY="343.0" prefHeight="200.0" prefWidth="260.0">
+      <TableView fx:id="tbOrdem" layoutX="72.0" layoutY="343.0" prefHeight="200.0" prefWidth="260.0">
          <columns>
-            <TableColumn prefWidth="46.0" text="Id" />
-            <TableColumn prefWidth="213.0" text="Ordem" />
+            <TableColumn fx:id="tcIdOrdem" prefWidth="46.0" text="Id" />
+            <TableColumn fx:id="tcOrdem" prefWidth="213.0" text="Ordem" />
          </columns>
       </TableView>
-      <TableView layoutX="640.0" layoutY="115.0" prefHeight="200.0" prefWidth="260.0">
+      <TableView fx:id="tbGenero" layoutX="640.0" layoutY="115.0" prefHeight="200.0" prefWidth="260.0">
          <columns>
-            <TableColumn prefWidth="40.0" text="ID" />
-            <TableColumn prefWidth="219.0" text="Genêro" />
+            <TableColumn fx:id="tcIdGenero" prefWidth="40.0" text="ID" />
+            <TableColumn fx:id="tcGenero" prefWidth="219.0" text="Genêro" />
          </columns>
       </TableView>
-      <TableView layoutX="640.0" layoutY="343.0" prefHeight="200.0" prefWidth="260.0">
+      <TableView fx:id="tbJaula" layoutX="640.0" layoutY="343.0" prefHeight="200.0" prefWidth="260.0">
          <columns>
-            <TableColumn prefWidth="40.0" text="ID" />
-            <TableColumn prefWidth="219.0" text="Jaula" />
+            <TableColumn fx:id="tcIdJaula" prefWidth="40.0" text="ID" />
+            <TableColumn fx:id="tcJaula" prefWidth="219.0" text="Jaula" />
          </columns>
       </TableView>
       <Label layoutX="314.0" layoutY="26.0" text="Gerenciamento de Animais">
@@ -47,19 +46,19 @@
             <Font size="30.0" />
          </font>
       </Label>
-      <TextField layoutX="516.0" layoutY="121.0" prefHeight="8.0" prefWidth="71.0" promptText="ID">
+      <TextField fx:id="idAnimal" layoutX="516.0" layoutY="121.0" prefHeight="8.0" prefWidth="71.0" promptText="ID">
          <font>
             <Font size="25.0" />
          </font>
       </TextField>
-      <DatePicker layoutX="356.0" layoutY="198.0" prefHeight="34.0" prefWidth="231.0" promptText="Data de Nascimento" />
-      <DatePicker layoutX="356.0" layoutY="242.0" prefHeight="34.0" prefWidth="231.0" promptText="Data de Falecimento" />
+      <DatePicker fx:id="dtNas" layoutX="356.0" layoutY="198.0" prefHeight="34.0" prefWidth="231.0" promptText="Data de Nascimento" />
+      <DatePicker fx:id="dtFale" layoutX="356.0" layoutY="242.0" prefHeight="34.0" prefWidth="231.0" promptText="Data de Falecimento" />
       <Label layoutX="360.0" layoutY="293.0" prefHeight="45.0" prefWidth="88.0" text="Idade:">
          <font>
             <Font size="30.0" />
          </font>
       </Label>
-      <TextField layoutX="487.0" layoutY="289.0" prefHeight="54.0" prefWidth="100.0" promptText="Idade">
+      <TextField fx:id="idade" layoutX="487.0" layoutY="289.0" prefHeight="54.0" prefWidth="100.0" promptText="Idade">
          <font>
             <Font size="25.0" />
          </font>
@@ -69,20 +68,20 @@
             <Font size="30.0" />
          </font>
       </Label>
-      <TextField layoutX="485.0" layoutY="360.0" prefHeight="54.0" prefWidth="100.0" promptText="Nome">
+      <TextField fx:id="nome" layoutX="485.0" layoutY="360.0" prefHeight="54.0" prefWidth="100.0" promptText="Nome">
          <font>
             <Font size="25.0" />
          </font>
       </TextField>
-      <TextArea layoutX="358.0" layoutY="425.0" prefHeight="118.0" prefWidth="231.0" promptText="OBSERVAÇÃO">
+      <TextArea fx:id="obs" layoutX="358.0" layoutY="425.0" prefHeight="118.0" prefWidth="231.0" promptText="OBSERVAÇÃO">
          <font>
             <Font size="19.0" />
          </font>
       </TextArea>
-      <TableView layoutX="916.0" layoutY="176.0" prefHeight="200.0" prefWidth="341.0">
+      <TableView fx:id="tbZoo" layoutX="916.0" layoutY="176.0" prefHeight="200.0" prefWidth="341.0">
          <columns>
-            <TableColumn prefWidth="40.0" text="ID" />
-            <TableColumn prefWidth="297.0" text="Zoológico" />
+            <TableColumn fx:id="tcIdZoo" prefWidth="40.0" text="ID" />
+            <TableColumn fx:id="tcZoo" prefWidth="297.0" text="Zoológico" />
          </columns>
       </TableView>
       <Button layoutX="1073.0" layoutY="70.0" mnemonicParsing="false" text="Voltar">
