--- a/src/br/ufrpe/zoologico/gui/grafica/FXML/CadastroJaula.fxml
+++ b/src/br/ufrpe/zoologico/gui/grafica/FXML/CadastroJaula.fxml
@@ -97,7 +97,7 @@
             <Font size="25.0" />
          </font>
       </TextField>
-      <Button layoutX="1104.0" layoutY="606.0" mnemonicParsing="false" onAction="#enter" text="Enter">
+      <Button fx:id="conAlt" disable="true" layoutX="1032.0" layoutY="606.0" mnemonicParsing="false" onAction="#conAlt" text="Confirmar" visible="false">
          <font>
             <Font size="36.0" />
          </font>
