--- a/src/br/ufrpe/zoologico/gui/grafica/FXML/GerenciamentoAnimal.fxml
+++ b/src/br/ufrpe/zoologico/gui/grafica/FXML/GerenciamentoAnimal.fxml
@@ -94,12 +94,12 @@
             <Font size="36.0" />
          </font>
       </Button>
-      <Button layoutX="1114.0" layoutY="484.0" mnemonicParsing="false" prefHeight="77.0" prefWidth="118.0" text="&gt;">
+      <Button layoutX="1114.0" layoutY="484.0" mnemonicParsing="false" onAction="#passar" prefHeight="77.0" prefWidth="118.0" text="&gt;">
          <font>
             <Font size="36.0" />
          </font>
       </Button>
-      <Button layoutX="965.0" layoutY="484.0" mnemonicParsing="false" prefHeight="77.0" prefWidth="118.0" text="&lt;">
+      <Button layoutX="965.0" layoutY="484.0" mnemonicParsing="false" onAction="#retornar" prefHeight="77.0" prefWidth="118.0" text="&lt;">
          <font>
             <Font size="36.0" />
          </font>
