--- a/src/br/ufrpe/zoologico/gui/grafica/FXML/GerenciarFuncionarios.fxml
+++ b/src/br/ufrpe/zoologico/gui/grafica/FXML/GerenciarFuncionarios.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" tabClosingPolicy="UNAVAILABLE" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9.0.1" fx:controller="br.ufrpe.zoologico.gui.grafica.controller.GerenciarFuncionariosController">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.zoologico.gui.grafica.controller.GerenciarFuncionariosController">
   <tabs>
     <Tab text="Listar/Editar/Remover">
       <content>
@@ -39,7 +39,7 @@
                         <Font size="18.0" />
                      </font>
                   </Button>
-                  <Label layoutX="538.0" layoutY="8.0" text="Funcionários">
+                  <Label layoutX="581.0" layoutY="15.0" text="Funcionários">
                      <font>
                         <Font size="36.0" />
                      </font>
@@ -103,6 +103,11 @@
                   <Button layoutX="1157.0" layoutY="16.0" mnemonicParsing="false" onAction="#voltar" text="Voltar">
                      <font>
                         <Font size="24.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="598.0" layoutY="561.0" mnemonicParsing="false" onAction="#salvarAlteracoes" text="Salvar Alterações">
+                     <font>
+                        <Font size="18.0" />
                      </font>
                   </Button>
                </children></AnchorPane>
@@ -194,7 +199,7 @@
                         <Font size="24.0" />
                      </font>
                   </Label>
-                  <Button layoutX="739.0" layoutY="601.0" mnemonicParsing="false" onAction="#cadastrarFuncionario" text="Cadastrar Funcionario">
+                  <Button layoutX="740.0" layoutY="592.0" mnemonicParsing="false" onAction="#cadastrarFuncionario" text="Cadastrar Funcionario">
                      <font>
                         <Font size="18.0" />
                      </font>
