--- a/src/br/ufrpe/zoologico/gui/grafica/FXML/GerenciamentoAnimal.fxml
+++ b/src/br/ufrpe/zoologico/gui/grafica/FXML/GerenciamentoAnimal.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.zoologico.gui.grafica.controller.GerenciarAnimalController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.zoologico.gui.grafica.controller.GerenciarAnimalController">
    <children>
       <TableView fx:id="tbEspecie" layoutX="72.0" layoutY="110.0" prefHeight="200.0" prefWidth="260.0">
         <columns>
@@ -84,7 +84,7 @@
             <TableColumn fx:id="tcZoo" prefWidth="297.0" text="Zoológico" />
          </columns>
       </TableView>
-      <Button layoutX="1073.0" layoutY="70.0" mnemonicParsing="false" text="Voltar">
+      <Button layoutX="1073.0" layoutY="70.0" mnemonicParsing="false" onAction="#voltar" text="Voltar">
          <font>
             <Font size="36.0" />
          </font>
